[gd_scene load_steps=2 format=2]

[ext_resource path="res://Unlock.gd" type="Script" id=1]

[node name="Unlock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="C1" type="Control" parent="VB"]
margin_right = 500.0
margin_bottom = 210.0
size_flags_vertical = 3

[node name="Password" type="LineEdit" parent="VB"]
margin_top = 214.0
margin_right = 500.0
margin_bottom = 238.0
align = 1
secret = true

[node name="Unlock" type="Button" parent="VB"]
margin_top = 242.0
margin_right = 500.0
margin_bottom = 262.0
text = "Unlock"

[node name="C2" type="Control" parent="VB"]
margin_top = 266.0
margin_right = 500.0
margin_bottom = 476.0
size_flags_vertical = 3

[node name="OpenDataFolder" type="Button" parent="VB"]
margin_top = 480.0
margin_right = 500.0
margin_bottom = 500.0
text = "Open data folder"
flat = true

[connection signal="gui_input" from="VB/Password" to="." method="_on_Password_gui_input"]
[connection signal="pressed" from="VB/Unlock" to="." method="_on_Unlock_pressed"]
[connection signal="pressed" from="VB/OpenDataFolder" to="." method="_on_OpenDataFolder_pressed"]
